# mlops-production-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .vercelignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  best_model.pt.dvc  dashboard.py  guardrails_serve_demo.py  main.py  mcp.db  mlops_pipeline.py  pyproject.toml  run_serve_demo.py  sitecustomize.py  test_ml_pipeline.py  train_and_save.py  vercel.json  verify_install.py  zenml_pipeline_demo.py
.dvc/tmp/: lock
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
artifacts/: registry.dvc
configs/: pipeline.yaml
dashboard_static/: index.html  script.js  style.css
notebooks/: adult_income_case_study.ipynb  adult_income_case_study_colab.ipynb
notebooks/.ipynb_checkpoints/: adult_income_case_study-checkpoint.ipynb
src/mlops_pipeline/: __init__.py  config.py  data.py  model.py  monitoring.py  pipeline.py  registry.py  schemas.py  serving.py  steps.py  training.py  validation.py
src/mlops_pipeline/adapters/: __init__.py  ray_serving.py  zenml_pipeline.py
src/mlops_pipeline/core/: __init__.py  pipeline.py  serving.py
src/mlops_pipeline/default_model/: card.json  latest.json
tests/: conftest.py  test_config.py  test_dashboard.py  test_data.py  test_model.py  test_monitoring.py  test_pipeline_integration.py  test_registry.py  test_schemas.py  test_training.py  test_validation.py
tools/: code_review.py
